--- a/repo_config.json
+++ b/repo_config.json
@@ -17,6 +17,15 @@
           "path": "/home/gelbard/my_configs/repo_config.json"
         }
       ]
+    },
+    {
+      "path_in_repo": "tags",
+      "platforms": [
+        {
+          "name": "Ubuntu",
+          "path": "/home/gelbard/projects/sggit/tags"
+        }
+      ]
     }
   ]
 }
