--- a/repo_config.json
+++ b/repo_config.json
@@ -10,11 +10,24 @@
       ]
     },
     {
+      "path_in_repo": "AL2_only/sggit.json",
+      "platforms": [
+        {
+          "name": "AL2",
+          "path": "/home/talg/.sggit.json"
+        }
+      ]
+    },
+    {
       "path_in_repo": "repo_config.json",
       "platforms": [
         {
           "name": "Ubuntu",
           "path": "/home/gelbard/my_configs/repo_config.json"
+        },
+        {
+          "name": "AL2",
+          "path": "/home/talg/MotherConf/repo_config"
         }
       ]
     },
@@ -24,6 +37,10 @@
         {
           "name": "Ubuntu",
           "path": "/home/gelbard/.config/nvim/init.vim"
+        },
+        {
+          "name": "AL2",
+          "path": "/home/talg/.config/nvim/init.vim"
         }
       ]
     },
@@ -33,6 +50,10 @@
         {
           "name": "Ubuntu",
           "path": "/home/gelbard/.tmux.conf"
+        },
+        {
+          "name": "AL2",
+          "path": "/home/talg/.tmux.conf"
         }
       ]
     },
@@ -42,6 +63,10 @@
         {
           "name": "Ubuntu",
           "path": "/home/gelbard/.config/nvim/coc-settings.json"
+        },
+        {
+          "name": "AL2",
+          "path": "/home/talg/.config/nvim/coc-setting.json"
         }
       ]
     },
@@ -51,6 +76,10 @@
         {
           "name": "Ubuntu",
           "path": "/home/gelbard/.config/nvim/lua/my_plugins.lua"
+        },
+        {
+          "name": "AL2",
+          "path": "/home/talg/.config/nvim/lua/my_plugins.lua"
         }
       ]
     },
@@ -60,6 +89,10 @@
         {
           "name": "Ubuntu",
           "path": "/home/gelbard/.config/nvim/configs/airline.vim"
+        },
+        {
+          "name": "AL2",
+          "path": "/home/talg/.config/nvim/configs/airline.vim"
         }
       ]
     },
@@ -69,6 +102,10 @@
         {
           "name": "Ubuntu",
           "path": "/home/gelbard/.config/nvim/configs/envs.vim"
+        },
+        {
+          "name": "AL2",
+          "path": "/home/talg/.config/nvim/configs/envs.vim"
         }
       ]
     },
@@ -78,6 +115,10 @@
         {
           "name": "Ubuntu",
           "path": "/home/gelbard/.config/nvim/configs/autocmds.vim"
+        },
+        {
+          "name": "AL2",
+          "path": "/home/talg/.config/nvim/configs/autocmds.vim"
         }
       ]
     },
@@ -87,6 +128,10 @@
         {
           "name": "Ubuntu",
           "path": "/home/gelbard/.config/nvim/configs/fzf.vim"
+        },
+        {
+          "name": "AL2",
+          "path": "/home/talg/.config/nvim/configs/fzf.vim"
         }
       ]
     },
@@ -96,6 +141,10 @@
         {
           "name": "Ubuntu",
           "path": "/home/gelbard/.config/nvim/configs/colors.vim"
+        },
+        {
+          "name": "AL2",
+          "path": "/home/talg/.config/nvim/configs/colors.vim"
         }
       ]
     },
@@ -105,6 +154,10 @@
         {
           "name": "Ubuntu",
           "path": "/home/gelbard/.config/nvim/configs/keybinds.vim"
+        },
+        {
+          "name": "AL2",
+          "path": "/home/talg/.config/nvim/configs/keybinds.vim"
         }
       ]
     },
@@ -114,6 +167,10 @@
         {
           "name": "Ubuntu",
           "path": "/home/gelbard/.config/nvim/configs/reminder.vim"
+        },
+        {
+          "name": "AL2",
+          "path": "/home/talg/.config/nvim/configs/reminder.vim"
         }
       ]
     },
