Add lsp.vim for AL2

--- a/repo_config.json
+++ b/repo_config.json
@@ -180,6 +180,10 @@
         {
           "name": "Ubuntu",
           "path": "/home/gelbard/.config/nvim/configs/lsp.vim"
+        },
+        {
+          "name": "AL2",
+          "path": "/home/talg/.config/nvim/configs/lsp.vim"
         }
       ]
     }
