--- a/repo_config.json
+++ b/repo_config.json
@@ -27,7 +27,7 @@
         },
         {
           "name": "AL2",
-          "path": "/home/talg/MotherConf/repo_config"
+          "path": "/home/talg/MotherConf/repo_config.json"
         }
       ]
     },
