tree_sitter.lua

--- a/repo_config.json
+++ b/repo_config.json
@@ -195,6 +195,15 @@
           "path": "/home/talg/.config/starship.toml"
         }
       ]
+    },
+    {
+      "path_in_repo": "nvim_config/tree_sitter.lua",
+      "platforms": [
+        {
+          "name": "AL2",
+          "path": "/local/home/talg/.config/nvim/lua/tree_sitter.lua"
+        }
+      ]
     }
   ]
 }
