--- a/tmux.conf
+++ b/tmux.conf
@@ -70,8 +70,8 @@ bind-key -n S-F2 display-panes \; split-window -v
 bind-key -n C-S-F2 new-session
 bind-key -n F3 previous-window
 bind-key -n F4 next-window
-bind-key -n M-Left previous-window
-bind-key -n M-Right next-window
+#bind-key -n M-Left previous-window
+#bind-key -n M-Right next-window
 bind-key -n M-Up switch-client -p
 bind-key -n M-Down switch-client -n
 bind-key -n M-m previous-window
