--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,8 @@ set -g status-keys emacs
 # reattach-to-user-namespace clipboard copy (macOS)
 # bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 # xclip clipboard copy (Ubuntu)
- bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+set -s set-clipboard on
 
 # Set the current working directory based on the current pane's current
 # working directory (if set; if not, use the pane's starting directory)
